--- a/index.html
+++ b/index.html
@@ -15,22 +15,49 @@
 
 <body class=".fira-sans-thin">
     <header>
-        <nav class="header-container">
+        <nav class="header-container container">
             <h1>Bangladesh 2.0</h1>
-            <button>Sign In</button>
+            <button class="btn">Sign In</button>
         </nav>
     </header>
     <main>
-        <section id="banner">
-                <div class="banner-detail">
-                    <h4>Bangladesh 2.0</h4>
-                    <h1>Idea , innovation ,
-                        vision and challenges in New Bangladesh.</h1>
-                    <button>Explore New Bangladesh</button>
+        <section id="banner" class="container">
+            <div class="banner-detail">
+                <h4>Bangladesh 2.0</h4>
+                <h1>Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h1>
+                <button class="btn">Explore New Bangladesh</button>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero.png" alt="">
+            </div>
+        </section>
+
+        <!--pillars of bangladesh-->
+        <section class="pillars-of-bd-parent container">
+            <h2 class="pillars-tittle">Pillars of "Bangladesh 2.0"</h2>
+            <div class="card-parent">
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Innovation</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
-                <div class="banner-img">
-                    <img src="assets/hero.png" alt="">
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Sustainability</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Infrastructure</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Empowerment</h2>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
