update default font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 </head>
 
-<body class=".fira-sans-thin">
+<body>
     <header>
         <nav class="header-container container">
             <h1>Bangladesh 2.0</h1>
