--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -37,26 +38,61 @@
         <section class="pillars-of-bd-parent container">
             <h2 class="pillars-tittle">Pillars of "Bangladesh 2.0"</h2>
             <div class="card-parent">
-                <div class="card">
+                <div class="card bc-card-white">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Innovation</h2>
                     <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
-                <div class="card">
+                <div class="card bc-card-white">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Sustainability</h2>
                     <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
-                <div class="card">
+                <div class="card bc-card-white">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Infrastructure</h2>
                     <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
-                <div class="card">
+                <div class="card bc-card-white">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Empowerment</h2>
                     <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
                 </div>
+            </div>
+        </section>
+
+        <!--vission of future-->
+        <section id="vision" class="container">
+            <h2 class="vision-header">The Vision of Future</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="vision-card">
+                <div class="card bc-blue-card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Digital Transformation</h2>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn bc-blue-btn">Learn More</button>
+                </div>
+                <div class="card bc-green-card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Green Energy</h2>
+                    <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn bc-green-btn">Learn More</button>
+                </div>
+                <div class="card bc-yellow-card">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Modern Infrastructure</h2>
+                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="bc-yellow-btn btn">Learn More</button>
+                </div>
+            </div>
+            <div class="vision-qoute">
+                <i class="fa-solid fa-quote-left"></i>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <h2>Dr. Muhammad Yunus</h2>
+                <p>Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </section>
     </main>
