solving some error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <!--pillars of bangladesh-->
-        <section class="pillars-of-bd-parent container">
+        <section id="pillars" class="pillars-of-bd-parent container">
             <h2 class="pillars-tittle">Pillars of "Bangladesh 2.0"</h2>
             <div class="card-parent">
                 <div class="card bc-card-white">
@@ -95,6 +95,9 @@
                 <p>Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </section>
+
+        <!--opinion section-->
+
     </main>
 </body>
 
