--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
         </section>
 
         <!--opinion section-->
+        <section id="opinion" class="container">
+            <h2>Your Opinion Matters</h2>
+            <form>
+                
+            </form>
+        </section>
 
     </main>
 </body>
