opinion and recent news page design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -72,7 +74,8 @@
                 <div class="card bc-blue-card">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Digital Transformation</h2>
-                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
+                        citizens.</p>
                     <button class="btn bc-blue-btn">Learn More</button>
                 </div>
                 <div class="card bc-green-card">
@@ -84,13 +87,19 @@
                 <div class="card bc-yellow-card">
                     <img src="assets/card-icon.png" alt="">
                     <h2>Modern Infrastructure</h2>
-                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.
+                    </p>
                     <button class="bc-yellow-btn btn">Learn More</button>
                 </div>
             </div>
             <div class="vision-qoute">
                 <i class="fa-solid fa-quote-left"></i>
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos
+                    deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
+                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
+                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
+                    tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto
+                    soluta necessitatibus vero?"</p>
                 <h2>Dr. Muhammad Yunus</h2>
                 <p>Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
@@ -98,12 +107,95 @@
 
         <!--opinion section-->
         <section id="opinion" class="container">
-            <h2>Your Opinion Matters</h2>
+            <h2 class="form-tittle">Your Opinion Matters</h2>
             <form>
-                
+                <div class="form-header">
+                    <h2>Questions</h2>
+                    <h2>Select Your Opinion</h2>
+                </div>
+                <div class="form-question">
+                    <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    <div class="select">
+                        <div class="select-option">
+                            <select name="" id="">
+                                <option value="Yes, I Agree">Yes, I Agree</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-question">
+                    <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    <div class="select">
+                        <div class="select-option">
+                            <select name="" id="">
+                                <option value="Yes, I Agree">Yes, I Agree</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-question">
+                    <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    <div class="select">
+                        <div class="select-option">
+                            <select name="" id="">
+                                <option value="Yes, I Agree">Yes, I Agree</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
             </form>
         </section>
 
+        <!--recent news-->
+        <section id="news" class="container">
+            <h2>Recent News</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="news-card">
+                <div class="news-card-image">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="news-card-content">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p><span>Date: 05/01/2025 </span><span> Time: 10.25 PM</span></p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn bc-green-btn">Read More</button>
+                </div>
+            </div>
+            <div class="news-card">
+                <div class="news-card-image">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="news-card-content">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p><span>Date: 05/01/2025 </span><span> Time: 10.25 PM</span></p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn bc-green-btn">Read More</button>
+                </div>
+            </div>
+            <div class="news-card">
+                <div class="news-card-image">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="news-card-content">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p><span>Date: 05/01/2025 </span><span> Time: 10.25 PM</span></p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn bc-green-btn">Read More</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
