--- a/index.html
+++ b/index.html
@@ -196,7 +196,50 @@
                 </div>
             </div>
         </section>
+
+        <!--donate today section-->
+        <section id="donate" class="container">
+            <h2>Donate Today</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donate-card">
+                <div class="card">
+                    <h2>100 Taka</h2>
+                </div>
+                <div class="card">
+                    <h2>200 Taka</h2>
+                </div>
+                <div class="card">
+                    <h2>500 Taka</h2>
+                </div>
+                <div class="card">
+                    <h2>1000 Taka</h2>
+                </div>
+            </div>
+            <input type="text" name="" id="" placeholder="Other Amount(Taka)">
+            <button class="btn bc-green-btn">Donate Now</button>
+        </section>
+
+        <!--subscribe section-->
+        <section id="subscribe" class="container">
+                <h2>Subscribe Newsletter</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                <div class="subscribe-btn">
+                    <input type="email" name="" id="" placeholder="Enter your email here">
+                    <button class="btn bc-green-btn">Subscribe</button>
+                </div>
+                <p>We promise not to spam you!</p>
+        </section>
     </main>
+
+    <footer>
+        <h2>Bangladesh 2.0</h2>
+        <div class="line"></div>
+        <div class="footer-icon">
+            <img src="assets/facebook.png" alt="">
+            <img src="assets/instagram.png" alt="">
+            <img src="assets/x.png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
